# writer

./: .gitignore  LICENSE  README.md  make_latents.ipynb  pyproject.toml  train_autoencoder.py  train_rectflow.py
src/autoencoder/: __init__.py  aetrainer.py  autoencoder.py  mnistdm.py
src/diffusion/: __init__.py  dit.py  latentsdm.py  rectflowtrainer.py
