[project]
name = "writer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffusers>=0.30.3",
    "einops>=0.8.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "lightning>=2.4.0",
    "matplotlib>=3.9.2",
    "pillow>=10.4.0",
    "pyproject-toml>=0.0.10",
    "torch>=2.4.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.19.1",
    "tqdm>=4.66.5",
    "wandb>=0.18.2",
]
